add Google places auto-complete start/end location boxes instead of raw form inputs.

--- a/traveltime/public/index.html
+++ b/traveltime/public/index.html
@@ -15,6 +15,7 @@
     -->
     <title>React App</title>
   </head>
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBrvsWKC-9u5a44mweFM3vexGfnf8_Pjgs&libraries=places"></script>
   <body>
     <div id="root"></div>
     <!--
