update index page title.

--- a/traveltime/public/index.html
+++ b/traveltime/public/index.html
@@ -13,7 +13,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Minimize car travel time</title>
   </head>
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBrvsWKC-9u5a44mweFM3vexGfnf8_Pjgs&libraries=places"></script>
   <body>
