use Flatly bootstrap theme (and make it a local copy of the css). cleanup react code to remove duplicated bits in the form JSX.

--- a/traveltime/public/index.html
+++ b/traveltime/public/index.html
@@ -18,10 +18,8 @@
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBrvsWKC-9u5a44mweFM3vexGfnf8_Pjgs&libraries=places"></script>
   <body>
   <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+<link rel="stylesheet" href="bootstrap.min.css">
 
-<!-- Optional theme -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap-theme.min.css">
     <div id="root"></div>
     <!--
       This HTML file is a template.
